--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,25 +2,15 @@
 <menu
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-    android:id="@+id/emboss"
-    android:title="Add Item"
-    android:icon="@android:drawable/ic_menu_add"
-    app:showAsAction="ifRoom"
-    />
 
     <item
-    android:id="@+id/blur"
-    android:title="Preferences"
-    android:icon="@android:drawable/ic_menu_preferences"
-    app:showAsAction="ifRoom"
-    />
+        android:id="@+id/addMenuItem"
+        android:title="New Painting"
+        app:showAsAction="ifRoom"
+        />
 
-    <item
-    android:id="@+id/clear"
-    android:title="About App"
-    app:showAsAction="never"
-    />
+
+
 
 
 </menu>
