--- a/app/src/main/res/layout/activity_painting.xml
+++ b/app/src/main/res/layout/activity_painting.xml
@@ -3,7 +3,7 @@
 
     xmlns:tools="http://schemas.android.com/tools"
 
-    android:id="@+id/activity_main"
+    android:id="@+id/activity_painting"
 
     android:layout_width="match_parent"
 
@@ -20,6 +20,12 @@
         android:layout_width="match_parent"
 
         android:layout_height="match_parent" />
+
+    <Button
+        android:id="@+id/saveButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Save" />
 
 </RelativeLayout>
 
