--- a/app/src/main/res/layout/activity_painting.xml
+++ b/app/src/main/res/layout/activity_painting.xml
@@ -1,25 +1,19 @@
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
+<GridLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-
     android:id="@+id/activity_main"
-
     android:layout_width="match_parent"
-
     android:layout_height="match_parent"
-
+    android:columnCount="1"
     tools:context=".MainActivity">
 
 
 
     <com.example.chloeandcarolinesawesomeapp.PaintView
-
         android:id="@+id/paintView"
-
         android:layout_width="match_parent"
-
         android:layout_height="match_parent" />
 
-</RelativeLayout>
+</GridLayout>
 
